# terminal-quest

./: .clang-format  CMakeLists.txt  README.md  character.cpp  compile_commands.json  main.cpp  terminal-quest
.cache/clangd/index/: character.h.1F505E2E1B25CA24.idx  main.cpp.977CD96C37562C50.idx  player.h.21969E3AA00E1218.idx
src/: character.cpp  character.h  main.cpp  player.cpp  player.h
src/levels/: level0.cpp  level0.h
